welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: too many arguments for method getCouleurSol: ()java.awt.Color
		getCouleurSol(T(i-1));
                             ^